<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:padding="8dp"
		android:orientation="vertical"
		android:background="@drawable/roundedbg">
		<TextView
			android:id="@+id/textview1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/githuberror"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@color/textprimary" />
		<TextView
			android:id="@+id/textview2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/githuberrordesc"
			android:textSize="12sp"
			android:textColor="@color/textprimary" />
		<LinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal"
			android:background="@drawable/roundedbgviolent">
			<TextView
				android:id="@+id/textview3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/force"
				android:textSize="12sp"
				android:textStyle="bold"
				android:textColor="@color/textprimary" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linear3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:padding="8dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal"
			android:background="@drawable/roundedbgviolent">
			<TextView
				android:id="@+id/textview4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/exit"
				android:textSize="12sp"
				android:textStyle="bold"
				android:textColor="@color/textprimary" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
