<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="@color/backgroundviolent">
		<LinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			android:background="@color/backgroundviolent">
			<ImageView
				android:id="@+id/imageview2"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_arrow_back_white"
				android:scaleType="fitXY" />
			<TextView
				android:id="@+id/textview1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/fetching"
				android:textSize="18sp"
				android:textStyle="bold"
				android:textColor="@color/textprimary" />
		</LinearLayout>
		<androidx.cardview.widget.CardView
			android:id="@+id/cardview1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			app:cardElevation="0dp"
			app:cardCornerRadius="8dp">
			<LinearLayout
				android:id="@+id/linear3"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">
				<ImageView
					android:id="@+id/imageview1"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:src="@drawable/default_image"
					android:scaleType="centerCrop" />
			</LinearLayout>
		</androidx.cardview.widget.CardView>
		<LinearLayout
			android:id="@+id/linear4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="horizontal"
			android:background="@color/backgroundviolent">
			<Button
				android:id="@+id/button1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="4dp"
				android:padding="8dp"
				android:text="@string/download"
				android:textSize="12sp"
				android:layout_weight="1"
				android:background="@drawable/roundedbg"
				android:textColor="@color/textprimary"
				android:singleLine="true"
				android:elevation="0dp"
				android:stateListAnimator="@null"
				android:foreground="?android:attr/selectableItemBackground" />
			<Button
				android:id="@+id/button2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				android:padding="8dp"
				android:text="@string/setwallpaper"
				android:textSize="12sp"
				android:layout_weight="1"
				android:background="@drawable/roundedbg"
				android:textColor="@color/textprimary"
				android:singleLine="true"
				android:elevation="0dp"
				android:stateListAnimator="@null"
				android:foreground="?android:attr/selectableItemBackground" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
