<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/background">
		<LinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			android:background="@color/backgroundviolent">
			<TextView
				android:id="@+id/textview2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/app_name"
				android:textSize="18sp"
				android:textStyle="bold"
				android:textColor="@color/textprimary" />
		</LinearLayout>
	</LinearLayout>
	<androidx.viewpager.widget.ViewPager
		android:id="@+id/viewpager1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:background="@color/backgroundviolent" />
	<LinearLayout
		android:id="@+id/bottombarroot"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/background">
		<LinearLayout
			android:id="@+id/linear4"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp"
			android:orientation="horizontal"
			android:background="@color/backgroundviolent">
			<LinearLayout
				android:id="@+id/linear6"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="4dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="vertical"
				android:layout_weight="1">
				<LinearLayout
					android:id="@+id/wallsbutton"
					android:layout_width="60dp"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="vertical"
					android:layout_weight="1"
					android:background="@drawable/roundedbg"
					android:foreground="?android:attr/selectableItemBackground">
					<ImageView
						android:id="@+id/imageview1"
						android:layout_width="22dp"
						android:layout_height="30dp"
						android:src="@drawable/ic_find_in_page_white"
						android:scaleType="fitCenter" />
				</LinearLayout>
				<TextView
					android:id="@+id/textview3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingTop="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="2dp"
					android:text="@string/news"
					android:textSize="12sp"
					android:textColor="@color/textprimary" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear7"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				android:layout_marginRight="4dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="vertical"
				android:layout_weight="1">
				<LinearLayout
					android:id="@+id/requestbutton"
					android:layout_width="60dp"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="vertical"
					android:layout_weight="1"
					android:background="@drawable/roundedbg"
					android:foreground="?android:attr/selectableItemBackground">
					<ImageView
						android:id="@+id/imageview2"
						android:layout_width="22dp"
						android:layout_height="30dp"
						android:src="@drawable/ic_crop_original_white"
						android:scaleType="fitCenter" />
				</LinearLayout>
				<TextView
					android:id="@+id/textview4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingTop="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="2dp"
					android:text="@string/walls"
					android:textSize="12sp"
					android:textColor="@color/textprimary" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear8"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				android:layout_marginRight="4dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="vertical"
				android:layout_weight="1">
				<LinearLayout
					android:id="@+id/linear5"
					android:layout_width="60dp"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="vertical"
					android:layout_weight="1"
					android:background="@drawable/roundedbg"
					android:foreground="?android:attr/selectableItemBackground">
					<ImageView
						android:id="@+id/imageview4"
						android:layout_width="22dp"
						android:layout_height="30dp"
						android:src="@drawable/ic_exit_to_app_white"
						android:scaleType="fitCenter" />
				</LinearLayout>
				<TextView
					android:id="@+id/textview5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingTop="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="2dp"
					android:text="@string/hiddenactivites"
					android:textSize="12sp"
					android:singleLine="true"
					android:textColor="@color/textprimary" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear9"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="vertical"
				android:layout_weight="1">
				<LinearLayout
					android:id="@+id/settingsbutton"
					android:layout_width="60dp"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="vertical"
					android:layout_weight="1"
					android:background="@drawable/roundedbg"
					android:foreground="?android:attr/selectableItemBackground">
					<ImageView
						android:id="@+id/imageview3"
						android:layout_width="22dp"
						android:layout_height="30dp"
						android:src="@drawable/ic_settings_white"
						android:scaleType="fitCenter" />
				</LinearLayout>
				<TextView
					android:id="@+id/textview6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingTop="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="2dp"
					android:text="@string/settings"
					android:textSize="12sp"
					android:textColor="@color/textprimary" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
