<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="8dp"
		android:gravity="center_horizontal|center_vertical"
		android:orientation="vertical"
		android:background="@color/background">
		<ScrollView
			android:id="@+id/vscroll1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/roundedbgviolent">
			<LinearLayout
				android:id="@+id/linear2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:orientation="vertical">
				<TextView
					android:id="@+id/textview5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/settings"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="@color/textprimary" />
				<LinearLayout
					android:id="@+id/linear4"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:background="@drawable/roundedbg">
					<TextView
						android:id="@+id/textview6"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/walltimeout"
						android:textSize="12sp"
						android:textColor="@color/textprimary" />
					<LinearLayout
						android:id="@+id/linear5"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="right|center_vertical"
						android:orientation="horizontal">
						<EditText
							android:id="@+id/edittext1"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:textSize="12sp"
							android:hint="Timeout"
							android:textColorHint="#607D8B"
							android:singleLine="true"
							android:background="@color/background"
							android:textColor="@color/textprimary" />
						<TextView
							android:id="@+id/textview7"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="ms"
							android:textSize="11sp"
							android:textColor="@color/textprimary" />
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/linear6"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:padding="8dp"
					android:orientation="horizontal"
					android:background="@drawable/roundedbg"
					android:foreground="?android:attr/selectableItemBackground">
					<TextView
						android:id="@+id/textview8"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/crashapp"
						android:textSize="12sp"
						android:textColor="@color/textprimary" />
				</LinearLayout>
				<TextView
					android:id="@+id/textview2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/information"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="@color/textprimary" />
				<LinearLayout
					android:id="@+id/linear12"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<ImageView
						android:id="@+id/imageview1"
						android:layout_width="100dp"
						android:layout_height="100dp"
						android:src="@drawable/applogo"
						android:scaleType="fitXY" />
					<LinearLayout
						android:id="@+id/linear13"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:orientation="vertical">
						<TextView
							android:id="@+id/textview14"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/app_name"
							android:textSize="16sp"
							android:textStyle="bold"
							android:textColor="@color/titletextcolor" />
						<TextView
							android:id="@+id/textview15"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="- BETA -"
							android:textSize="12sp"
							android:textColor="@color/textprimary" />
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/linear3"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:padding="8dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:background="@drawable/roundedbg">
					<de.hdodenhof.circleimageview.CircleImageView
						android:id="@+id/circleimageview1"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:src="@drawable/devpfp1"
						app:civ_border_width="0dp"
						app:civ_border_color="#008DCD"
						app:civ_circle_background_color="#FFFFFF"
						app:civ_border_overlay="false" />
					<TextView
						android:id="@+id/textview4"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="ios7jbpro - Main Dev"
						android:textSize="14sp"
						android:textColor="@color/textprimary" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/linear10"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:padding="8dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:background="@drawable/roundedbg">
					<de.hdodenhof.circleimageview.CircleImageView
						android:id="@+id/circleimageview5"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:src="@drawable/eimaenpfp"
						app:civ_border_width="0dp"
						app:civ_border_color="#008DCD"
						app:civ_circle_background_color="#FFFFFF"
						app:civ_border_overlay="true" />
					<TextView
						android:id="@+id/textview12"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="Eimaen - Hosting(AltDisk)"
						android:textSize="14sp"
						android:textColor="@color/textprimary" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/linear7"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:padding="8dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:background="@drawable/roundedbg">
					<de.hdodenhof.circleimageview.CircleImageView
						android:id="@+id/circleimageview2"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:src="@drawable/jbk0pfp"
						app:civ_border_width="0dp"
						app:civ_border_color="#008DCD"
						app:civ_circle_background_color="#FFFFFF"
						app:civ_border_overlay="true" />
					<TextView
						android:id="@+id/textview9"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="jbk0 - Necessary fixes for API 31 &amp; old fix for Android 12 wallpaper system"
						android:textSize="14sp"
						android:textColor="@color/textprimary" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/linear8"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:padding="8dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:background="@drawable/roundedbg">
					<de.hdodenhof.circleimageview.CircleImageView
						android:id="@+id/circleimageview3"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:src="@drawable/mikaapfp"
						app:civ_border_width="0dp"
						app:civ_border_color="#008DCD"
						app:civ_circle_background_color="#FFFFFF"
						app:civ_border_overlay="true" />
					<TextView
						android:id="@+id/textview10"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="mikaaa.dev - Resources XML fixes"
						android:textSize="14sp"
						android:textColor="@color/textprimary" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/linear9"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:padding="8dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:background="@drawable/roundedbg">
					<de.hdodenhof.circleimageview.CircleImageView
						android:id="@+id/circleimageview4"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:src="@drawable/nift4pfp"
						app:civ_border_width="0dp"
						app:civ_border_color="#008DCD"
						app:civ_circle_background_color="#FFFFFF"
						app:civ_border_overlay="true" />
					<TextView
						android:id="@+id/textview11"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="nift4 - Resources XML fixes &amp; setresource codes &amp; proper terminate code"
						android:textSize="14sp"
						android:textColor="@color/textprimary" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/linear14"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:padding="8dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:background="@drawable/roundedbg">
					<de.hdodenhof.circleimageview.CircleImageView
						android:id="@+id/circleimageview7"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:src="@drawable/fxtipfp"
						app:civ_border_width="0dp"
						app:civ_border_color="#008DCD"
						app:civ_circle_background_color="#FFFFFF"
						app:civ_border_overlay="true" />
					<TextView
						android:id="@+id/textview16"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="FXTi - Android 12 jar"
						android:textSize="14sp"
						android:textColor="@color/textprimary" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/linear11"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:padding="8dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:background="@drawable/roundedbg">
					<de.hdodenhof.circleimageview.CircleImageView
						android:id="@+id/circleimageview6"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:src="@drawable/cotunpfp"
						app:civ_border_width="0dp"
						app:civ_border_color="#008DCD"
						app:civ_circle_background_color="#FFFFFF"
						app:civ_border_overlay="true" />
					<TextView
						android:id="@+id/textview13"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="Cotunjr - Active Tester"
						android:textSize="14sp"
						android:textColor="@color/textprimary" />
				</LinearLayout>
				<TextView
					android:id="@+id/textview3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="i hope you die lazrdev"
					android:textSize="12sp"
					android:textColor="@color/textprimary" />
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</LinearLayout>
